kubernetes-manifest/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediplus-deployment
  labels:
    app: mediplus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mediplus
  template:
    metadata:
      labels:
        app: mediplus
    spec:
      containers:
      - name: mediplus
        image: 503640389215.dkr.ecr.eu-north-1.amazonaws.com/mediplus:latest
        ports:
        - containerPort: 80
