kubernetes-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediplus-service
spec:
  selector:
    app: mediplus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
