kubernetes-manifest/ingress.yaml
apiVersion: networking.kubernetes-manifest.io/v1
kind: Ingress
metadata:
  name: mediplus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - mypodsix.online
    secretName: mediplus-tls
  rules:
  - host: mypodsix.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mediplus-service
            port:
              number: 80
